Add more functions to framemanager
Test commit for adding functions that handle setting t_atoms and velocity flag.

Need to improve framemanager to handle individual items better.

Change-Id: I68891ece41c7023690f0d686b9d91918fc868856

--- a/src/gromacs/trajectoryanalysis/CMakeLists.txt
+++ b/src/gromacs/trajectoryanalysis/CMakeLists.txt
@@ -32,7 +32,7 @@
 # To help us fund GROMACS development, we humbly ask that you cite
 # the research papers on the package. Check out http://www.gromacs.org.
 
-file(GLOB TRAJECTORYANALYSIS_SOURCES *.cpp modules/*.cpp)
+file(GLOB TRAJECTORYANALYSIS_SOURCES *.cpp modules/*.cpp modules/framemodules/*cpp)
 set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${TRAJECTORYANALYSIS_SOURCES} PARENT_SCOPE)
 
 gmx_install_headers(
