Make PME GPU structures use DeviceBuffer
A couple related function calls in PME are changed to match.
allocateDeviceBuffer() is now correctly called with the GPU
context handle instead of a stream handle (this was not causing
errors since context is only a stub in CUDA implementation).
pme-gpu-internal.cpp is now compiled with CUDA compiler
(to handle gputraits.cuh included through devicebuffer.h),
paving the way for using unified CUDA/OpenCL host code.

Change-Id: I3621bd93e4b2cc7c02161323f532ca62b48763ab

--- a/src/gromacs/ewald/CMakeLists.txt
+++ b/src/gromacs/ewald/CMakeLists.txt
@@ -64,6 +64,9 @@ if (GMX_USE_CUDA)
         pme-gpu.cpp
         pme-gpu-internal.cpp
         )
+    gmx_compile_cpp_as_cuda(
+        pme-gpu-internal.cpp
+        )
 else()
     gmx_add_libgromacs_sources(
         # Files that implement stubs
