Move most PME GPU code from pme.cu to pme-gpu-impl.cpp
A cmake helper is added to mark .cpp files to be compiled wth nvcc.

Change-Id: Ia084dd70fbb48add9ddee4e6f393d3e27ef1d6f9

--- a/src/gromacs/ewald/CMakeLists.txt
+++ b/src/gromacs/ewald/CMakeLists.txt
@@ -37,6 +37,7 @@ file(GLOB EWALD_GPU_SHARED_SOURCES pme-gpu*.cpp)
 file(GLOB EWALD_CUDA_SOURCES *.cu)
 
 if (GMX_USE_CUDA)
+    gmx_add_libgromacs_gpu_shared_sources(${EWALD_GPU_SHARED_SOURCES})
     gmx_add_libgromacs_sources(${EWALD_CUDA_SOURCES})
 else ()
     # Removing the GPU PME plain C++ fles from the build target
