--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -39,6 +39,7 @@ if (GMX_CLANG_CUDA)
 endif()
 
 set_property(GLOBAL PROPERTY GMX_LIBGROMACS_SOURCES)
+set_property(GLOBAL PROPERTY GMX_LIBGROMACS_GPU_SHARED_SOURCES)
 set_property(GLOBAL PROPERTY GMX_INSTALLED_HEADERS)
 set_property(GLOBAL PROPERTY GMX_AVX_512_SOURCE)
 
@@ -51,6 +52,10 @@ function (_gmx_add_files_to_property PROPERTY)
                          ${CMAKE_CURRENT_LIST_DIR}/${_file})
         endif()
     endforeach()
+endfunction ()
+
+function (gmx_add_libgromacs_gpu_shared_sources)
+    _gmx_add_files_to_property(GMX_LIBGROMACS_GPU_SHARED_SOURCES ${ARGN})
 endfunction ()
 
 function (gmx_add_libgromacs_sources)
@@ -162,7 +167,8 @@ list(APPEND LIBGROMACS_SOURCES ${GENERATED_VERSION_FILE})
 if (GMX_CLANG_CUDA)
     foreach (_file ${LIBGROMACS_SOURCES})
         get_filename_component(_ext ${_file} EXT)
-        if (${_ext} STREQUAL ".cu")
+        get_source_file_property(_cuda_source_format ${_file} CUDA_SOURCE_PROPERTY_FORMAT)
+        if (${_ext} STREQUAL ".cu" OR _cuda_source_format)
             gmx_compile_cuda_file_with_clang(${_file})
         endif()
     endforeach()
@@ -172,6 +178,10 @@ if (GMX_USE_CUDA)
     # Work around FindCUDA that prevents using target_link_libraries()
     # with keywords otherwise...
     set(CUDA_LIBRARIES PRIVATE ${CUDA_LIBRARIES})
+
+    get_property(LIBGROMACS_GPU_SHARED_SOURCES GLOBAL PROPERTY GMX_LIBGROMACS_GPU_SHARED_SOURCES)
+    set_source_files_properties(${LIBGROMACS_GPU_SHARED_SOURCES} PROPERTIES CUDA_SOURCE_PROPERTY_FORMAT OBJ)
+
     if (NOT GMX_CLANG_CUDA)
         cuda_add_library(libgromacs ${LIBGROMACS_SOURCES})
     else()
