Activate reformatting for OpenCL
A recent change added uncrustify support, but removed
copyright and include sorting checking.

Change-Id: Ib24018f7074897af311f4e2f1da66fbdd8a9b141

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,14 @@
 # Generic rules
+#
+# See docs in admin/reformat_all.sh.
+#
 *.c     filter=uncrustify gmx-doxygen
 *.cpp   filter=uncrustify gmx-doxygen
 *.cu    filter=uncrustify
-*.cl    filter=uncrustify
+*.cl    filter
 *.h     filter=uncrustify gmx-doxygen
 *.cuh   filter=uncrustify
-*.clh   filter=uncrustify
+*.clh   filter
 CMakeLists.txt  filter=copyright
 *.cmake         filter=copyright
 *.cmakein       filter=copyright
