--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # This file is part of the GROMACS molecular simulation package.
 #
-# Copyright (c) 2009,2010,2011,2012,2013,2014, by the GROMACS development team, led by
+# Copyright (c) 2009,2010,2011,2012,2013,2014,2018, by the GROMACS development team, led by
 # Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 # and including many others, as listed in the AUTHORS file in the
 # top-level source directory and at http://www.gromacs.org.
@@ -35,9 +35,9 @@
 add_subdirectory(template)
 
 install(FILES README.tutor README_FreeEnergyModifications.txt
-    DESTINATION ${DATA_INSTALL_DIR}
+    DESTINATION ${CMAKE_INSTALL_DATADIR}
     COMPONENT data)
 install(DIRECTORY top
-    DESTINATION ${DATA_INSTALL_DIR}
+    DESTINATION ${CMAKE_INSTALL_DATADIR}
     COMPONENT data
     PATTERN "*~" EXCLUDE)
