Use default CMake path variables
Remove our homegrown path variables for binaries, libraries,
manpages and data in favor of the ones documented as part of CMake.
The 'gromacs' part of the data directory has been moved to a separate
GMX_INSTALL_DATASUBDIR variable.

This enables Gromacs-2018 docker builds with multiple different
accelerations installed with different binary/library subdirectories.

Change-Id: I1618428c94ea2cfb90dc1ff5261b26a9307c1a94

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -305,7 +305,7 @@ if (MAN_PAGE_DIR)
     # Trailing slash on directory is significant for
     # install(DIRECTORY). See CMake docs.
     install(DIRECTORY ${MAN_PAGE_DIR}/
-        DESTINATION ${MAN_INSTALL_DIR}/man1
+        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1
         COMPONENT man OPTIONAL
         FILES_MATCHING PATTERN "*.1")
 endif()
