--- a/src/gromacs/essentialdynamics/CMakeLists.txt
+++ b/src/gromacs/essentialdynamics/CMakeLists.txt
@@ -33,7 +33,7 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 file(GLOB ESSENTIALDYNAMICS_SOURCES *.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${ESSENTIALDYNAMICS_SOURCES} PARENT_SCOPE)
+target_sources(libgromacs PRIVATE ${ESSENTIALDYNAMICS_SOURCES})
 
 if (BUILD_TESTING)
 #    add_subdirectory(tests)
