--- a/src/gromacs/imd/CMakeLists.txt
+++ b/src/gromacs/imd/CMakeLists.txt
@@ -33,4 +33,4 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 file(GLOB IMD_SOURCES *.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${IMD_SOURCES} PARENT_SCOPE)
+target_sources(libgromacs PRIVATE ${IMD_SOURCES})
