--- a/src/gromacs/random/CMakeLists.txt
+++ b/src/gromacs/random/CMakeLists.txt
@@ -33,7 +33,7 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 file(GLOB RANDOM_SOURCES *.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${RANDOM_SOURCES} PARENT_SCOPE)
+target_sources(libgromacs PRIVATE ${RANDOM_SOURCES})
 
 gmx_install_headers(
     exponentialdistribution.h
