--- a/src/gromacs/statistics/CMakeLists.txt
+++ b/src/gromacs/statistics/CMakeLists.txt
@@ -34,6 +34,4 @@
 
 file(GLOB STATISTICS_SOURCES *.cpp)
 
-set(LIBGROMACS_SOURCES
-    ${LIBGROMACS_SOURCES} ${STATISTICS_SOURCES} PARENT_SCOPE)
-
+target_sources(libgromacs PRIVATE ${STATISTICS_SOURCES})
