--- a/src/gromacs/swap/CMakeLists.txt
+++ b/src/gromacs/swap/CMakeLists.txt
@@ -33,5 +33,5 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 file(GLOB SWAP_SOURCES *.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${SWAP_SOURCES} PARENT_SCOPE)
+target_sources(libgromacs PRIVATE ${SWAP_SOURCES})
 
