--- a/src/gromacs/timing/CMakeLists.txt
+++ b/src/gromacs/timing/CMakeLists.txt
@@ -33,7 +33,7 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 file(GLOB TIMING_SOURCES *.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${TIMING_SOURCES} PARENT_SCOPE)
+target_sources(libgromacs PRIVATE ${TIMING_SOURCES})
 
 gmx_install_headers(
     wallcycle.h
