--- a/src/gromacs/analysisdata/CMakeLists.txt
+++ b/src/gromacs/analysisdata/CMakeLists.txt
@@ -33,7 +33,7 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 file(GLOB ANALYSISDATA_SOURCES *.cpp modules/*.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${ANALYSISDATA_SOURCES} PARENT_SCOPE)
+target_sources(libgromacs PRIVATE ${ANALYSISDATA_SOURCES})
 
 gmx_install_headers(
     abstractdata.h
