--- a/src/gromacs/gmxpreprocess/CMakeLists.txt
+++ b/src/gromacs/gmxpreprocess/CMakeLists.txt
@@ -34,7 +34,7 @@
 
 file(GLOB GMXPREPROCESS_SOURCES *.cpp)
 
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${GMXPREPROCESS_SOURCES} PARENT_SCOPE)
+target_sources(libgromacs PRIVATE ${GMXPREPROCESS_SOURCES})
 
 if(BUILD_TESTING)
     add_subdirectory(tests)
