--- a/src/gromacs/simd/CMakeLists.txt
+++ b/src/gromacs/simd/CMakeLists.txt
@@ -33,7 +33,7 @@
 # the research papers on the package. Check out http://www.gromacs.org.
 
 file(GLOB SIMD_SOURCES *.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${SIMD_SOURCES} PARENT_SCOPE)
+target_sources(libgromacs PRIVATE ${SIMD_SOURCES})
 
 if (BUILD_TESTING)
     add_subdirectory(tests)
